migrate to cmake

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "tst/catch2"]
-	path = tst/catch2
+[submodule "external/rapidcheck"]
+	path = external/rapidcheck
+	url = https://github.com/emil-e/rapidcheck
+[submodule "external/catch2"]
+	path = external/catch2
 	url = https://github.com/catchorg/catch2
