--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 add_executable(${PROJECT_NAME}_test
-	dmgb.cpp
+	dmgb_test.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}_test
