--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,13 @@ include_directories(
 	${PROJECT_SOURCE_DIR}/cpu/include
 	${PROJECT_SOURCE_DIR}/mmu/include
 	${PROJECT_SOURCE_DIR}/utl/include
+	${PROJECT_SOURCE_DIR}/external/gsl/include
 )
 
 add_subdirectory(cpu)
 add_subdirectory(mmu)
 add_subdirectory(utl)
+add_subdirectory(external/gsl)
 
 enable_testing()
 add_subdirectory(dmgb_test)
