--- a/dmgb_test/CMakeLists.txt
+++ b/dmgb_test/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(
 	include/
 )
 
-add_subdirectory(external/catch2)
+#add_subdirectory(external/catch2)
 add_subdirectory(external/rapidcheck)
 
 add_executable(${PROJECT_NAME}_test ${SOURCES})
@@ -21,7 +21,8 @@ target_link_libraries(${PROJECT_NAME}_test
 	mmu
 	utl
 	rapidcheck
-	Catch2::Catch2
+	#Catch2::Catch2
+	CONAN_PKG::catch2
 )
 
 add_test(Test dmgb_test)
