--- a/cpu/CMakeLists.txt
+++ b/cpu/CMakeLists.txt
@@ -3,6 +3,9 @@ set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
 
 set(SOURCES
 	${INCLUDE_DIR}/cpu.h
+	${INCLUDE_DIR}/read_writer.h
+	${INCLUDE_DIR}/rw_ref.h
+	${INCLUDE_DIR}/bitref.h
 
 	${SOURCE_DIR}/cpu.cpp
 )
