rom_only mapper

--- a/mmu/CMakeLists.txt
+++ b/mmu/CMakeLists.txt
@@ -4,9 +4,11 @@ set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
 set(SOURCES
 	${INCLUDE_DIR}/mmu.h
 	${INCLUDE_DIR}/bios.h
+	${INCLUDE_DIR}/rom_only.h
 
 	${SOURCE_DIR}/mmu.cpp
 	${SOURCE_DIR}/bios.cpp
+	${SOURCE_DIR}/rom_only.cpp
 )
 
 add_library(mmu STATIC ${SOURCES})
