--- a/mmu/CMakeLists.txt
+++ b/mmu/CMakeLists.txt
@@ -1,21 +1,18 @@
-set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
-set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
-
 set(SOURCES
-	${INCLUDE_DIR}/mmu.h
-	${INCLUDE_DIR}/bios.h
-	${INCLUDE_DIR}/rom_only.h
-
-	${SOURCE_DIR}/mmu.cpp
-	${SOURCE_DIR}/bios.cpp
-	${SOURCE_DIR}/rom_only.cpp
+	source/mmu.cpp
+	source/bios.cpp
+	source/rom_only.cpp
 )
 
-add_library(mmu STATIC ${SOURCES})
+enable_unity_build(mmu SOURCES)
 
-target_include_directories(
-	mmu
-	PUBLIC "${INCLUDE_DIR}"
-)
+add_library(mmu STATIC
+	${SOURCES})
 
-target_link_libraries(mmu CONAN_PKG::gsl_microsoft)
+target_include_directories(mmu PUBLIC
+	include)
+
+target_link_libraries(mmu PRIVATE 
+	CONAN_PKG::gsl_microsoft
+	cpu
+	utl)
