--- a/utl/CMakeLists.txt
+++ b/utl/CMakeLists.txt
@@ -1,20 +1,13 @@
-set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
-set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/source")
-
 set(SOURCES
-	${INCLUDE_DIR}/types.h
-	${INCLUDE_DIR}/word.h
-	${INCLUDE_DIR}/rw_ref.h
-	${INCLUDE_DIR}/read_writer.h
-
-	${SOURCE_DIR}/word.cpp
-	${SOURCE_DIR}/rw_ref.cpp
+	source/word.cpp
+	source/rw_ref.cpp
 )
 
-add_library(utl STATIC ${SOURCES})
+enable_unity_build(utl SOURCES)
 
-target_include_directories(
-	utl
-	PUBLIC "${INCLUDE_DIR}"
-)
+add_library(utl STATIC
+	${SOURCES})
+
+target_include_directories(utl PUBLIC
+	include)
 
